--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ function transformPotToJam() {
   newJar.style.position = "absolute";
   newJar.style.left = pot.style.left;
   newJar.style.top = pot.style.top;
-  newJar.style.width = pot.style.width;
+  newJar.style.width = "26%";
   newJar.style.zIndex = 1;
 
   container.replaceChild(newJar, pot);
