--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ body {
   <img id="wand" class="item" src="https://i.ibb.co/BVRr2VR2/Chat-GPT-Image-19-2025-08-36-05.png" alt="Волшебная палочка" />
 
   <div id="steam-text">
-    <h2 style="color:#7b3131; margin:0 0 8px 0; font-size:18px;">
-      ✨ Ягодка, мы рады приветствовать тебя на волшебной кухне! ✨
+    <h2 style="color:#7b3131; margin:0 0 8px 0; font-size:22px;">
+      Ягодка, мы рады приветствовать тебя на волшебной кухне!
     </h2>
     <p>Сегодня особенный день, поэтому у нас для тебя есть особенный рецепт. Давай приготовим бесконечное варенье! Сколько его не ешь, оно не закончится и всегда будет тебя радовать.</p>
     <p>Просто добавляй ягоды в кастрюлю: 🍓👉🏻🥘</p>
@@ -287,8 +287,8 @@ function transformPotToJam() {
   const newJar = document.createElement("img");
   newJar.src = jamJarSrc;
   newJar.style.position = "absolute";
-  newJar.style.left = pot.style.left;
-  newJar.style.top = pot.style.top;
+  newJar.style.left = "33%";
+  newJar.style.top = "20%";
   newJar.style.width = "26%";
   newJar.style.zIndex = 1;
 
