--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@ function transformPotToJam() {
   const newJar = document.createElement("img");
   newJar.src = jamJarSrc;
   newJar.style.position = "absolute";
-  newJar.style.left = pot.style.left;
-  newJar.style.top = pot.style.top;
-  newJar.style.width = "22%";
+  newJar.style.left = "45%";
+  newJar.style.top = "30%";
+  newJar.style.width = "25%";
   newJar.style.zIndex = 1;
 
   container.replaceChild(newJar, pot);
