--- a/index.html
+++ b/index.html
@@ -280,6 +280,11 @@ function checkWandUse(e) {
     wandRect.top < potRect.bottom &&
     wandRect.bottom > potRect.top;
 
+  if (overlap) {
+    transformPotToJam();
+  } else {
+    showTip(e.clientX, e.clientY, "к кастрюле 🥘🪄");
+  }
 }
 
 function transformPotToJam() {
@@ -339,36 +344,15 @@ function triggerPoof(x, y, scale = 1) {
     setTimeout(() => puff.remove(), 400);
   }, 600);
 }
-  // -------------------- ПОДСКАЗКИ --------------------
-function showTip(x, y) {
-  let text = "";
 
-  if (!wandPicked && !lastBubble) {
-    text = "ещё не время 🪄"; // бабл ещё не закончен
-  } else if (wandPicked && !jamPlaced) {
-    text = "поднеси к кастрюле 🥘🪄"; // палочка в руке, можно к кастрюле
-  } else {
-    return; // если варенье готово, подсказки не показываем
-  }
-
+// -------------------- ПОДСКАЗКИ --------------------
+function showTip(x, y, text) {
   smallTip.innerText = text;
   smallTip.style.left = x + "px";
   smallTip.style.top = y - 20 + "px";
   smallTip.style.opacity = "1";
   setTimeout(() => (smallTip.style.opacity = "0"), 1000);
 }
-
-// -------------------- ПРИМЕР ВЫЗОВА --------------------
-// на клик по палочке:
-wand.addEventListener("mousedown", (e) => {
-  showTip(e.clientX, e.clientY);
-});
-
-// на клик по кастрюле (когда палочка в руке):
-pot.addEventListener("mousedown", (e) => {
-  if (wandPicked && !jamPlaced) showTip(e.clientX, e.clientY);
-});
-
 </script>
 
 </body>
