--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@ function transformPotToJam() {
   newJar.style.top = "3%";
   newJar.style.width = "29%";
   newJar.style.zIndex = 1;
+  newJar.style.filter = "drop-shadow(0px 12px 1px rgba(0,0,0,0.2))";
 
   container.replaceChild(newJar, pot);
   pot = newJar;
